# SmartDomophone_Emulator

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
emulator/: Dockerfile  DomophoneModel.py  main.py  requirements.txt
mosquitto/: .gitignore
web-server/: web-server.py
web_server/: .gitignore  Dockerfile  alembic.ini  app.py  models.py  requirements.txt
web_server/migrations/: env.py
web_server/migrations/versions/: 36e872754203_create_domophones_and_events_tables.py
web_server/templates/: index.html
